# osm-chordify

./: .gitignore  CHANGELOG.md  NOAI  README.md  pyproject.toml  seattle_cbg_2018_wgs84.geojson  seattle_county_2018_wgs84.geojson
.github/workflows/: ci.yml
docs/: USAGE.md
examples/: __init__.py  _bootstrap.py  build_seattle.py  build_sfbay.py  common.py  compare_osm_pbf.py  debug_network.py  diagnose_osm_pbf.py  diagnose_sfbay.py  download_sfbay_counties.py  download_sfbay_masks.py  intersect_and_map_sfbay.py  intersect_zones.py  map_network_csv_to_osm_pbf.py
src/osm_chordify/: __init__.py  _osm_conf.ini  core.py  download_osm_network.py  main.py  process_isrm_network_intersection.py  process_osm_network.py  process_polygon_intersection.py  study_area_config.py
src/osm_chordify/osm/: analyze.py  diagnostics.py  export.py  graph.py  intersect.py  simplify.py  tags.py  xml.py
src/osm_chordify/utils/: beam.py  data_collection.py  geo.py  io.py  network.py
tests/: test_diagnostics.py  test_examples.py  test_export.py  test_graph.py  test_intersect.py  test_process_tags.py  test_simplify.py  test_smoke.py  test_tags.py
