[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osm-chordify"
version = "0.2.1"
description = "OSM data is an improv jam session, osm-chordify lets you chop it up, cut the takes, and bounce exactly what you need for routing, simulation, and GIS workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Haitam Laarabi"}]
license = {file = "LICENSE"}
dependencies = [
    "geopandas",
    "networkx",
    "osmnx",
    "osmium",
    "pandas",
    "pyarrow",
    "pyproj",
    "shapely",
    "tqdm",
    "pygris",
    "census",
    "requests",
    "osmium",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
diagnostics = ["pyrosm", "matplotlib"]

[tool.hatch.build.targets.wheel]
packages = ["src/osm_chordify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires network access and downloads real OSM data (deselect with '-m not integration')",
]
